--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -35,7 +35,7 @@
 </script>-->
     
     <script>
-        var cmds = [
+          var cmds = [
             "",
             "help",
             "clear",
@@ -81,7 +81,7 @@
                         $out.append("Couldn't find a file / message with the name ${val.substring(2)}.<br>");   
                     }
                     if (val === "show need your help") {
-                    $out.append("gavin@localhost:~$ show favor<br>");
+                    $out.append("gavin@localhost:~$ show need your help<br>");
                     $out.append("Viewing the content of favor:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
                 } else
                 if (val === "connect root m4sk") {
