--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -68,9 +68,14 @@
                 if (val === "clear") {
                     $out.empty();
                 } else
+                                       if(val.startsWith("show")) {
                     if (val === "show need your help") {
                     $out.append("gavin@localhost:~$ show need your help<br>");
                    $out.append("Viewing the content of need your help:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
+                    } else if(val === "show") {
+                        $out.append("gavin@localhost:~$ show<br>");
+                        $out.append("Specify a file / message to show.<br>");
+                    }      
                 } else
                 if (val === "inbox") {
                     $out.append("gavin@localhost:~$ inbox<br>");
