--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -71,7 +71,7 @@
                                        if(val.startsWith("show")) {
                                            if(!cmds.includes(val)) {
                                                $out.append(`gavin@localhost:~$ ${val}<br>`);
-                                               $out.append(`Could not find a file / message with the name of ${val.substring(2)}.`);
+                                               $out.append(`Could not find a file / message with the name of '${val.substring(5)}'.`);
                                            }
                     if (val === "show need your help") {
                     $out.append("gavin@localhost:~$ show need your help<br>");
