--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div id="screen">Welcome to Terminal Mystery...
+    <div id="screen">Welcome to Terminal Mystery.
         <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>.
         <br>Original idea from <a href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
         <br>Type 'help' for a list of commands.
@@ -39,6 +39,7 @@
             "",
             "help",
             "clear",
+            "concept",
             "inbox",
             "show",
             "show need your help",
@@ -83,7 +84,7 @@
                 } else
                 if (val === "inbox") {
                     $out.append("gavin@localhost:~$ inbox<br>");
-                    $out.append("Your Inbox:<br>↳ need your help");
+                    $out.append("Your Inbox:<br>↳ need your help<br>");
                 } else
                     if(val.startsWith("connect")) {
                                            if(!cmds.includes(val)) {
@@ -115,7 +116,7 @@
                         $out.append("Specify a host and password to connect to.<br>");
                     }      
                 } else
-                /*if (val === "breach") {
+                if (val === "breach") {
                     $out.append("gavin@localhost:~$ breach<br>");
                     $out.append("Breaching");
                     setTimeout(function() {
@@ -136,7 +137,7 @@
                     setTimeout(function() {
                         $out.append("Successfully breached the firewall.<br>");
                     }, 6250);
-                } else*/ {
+                } else {
                     $out.append(`gavin@localhost:~$ ${val}<br>`);
                     $out.append("Command not recognized.<br>");
                 }
