--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -86,7 +86,7 @@
                         $out.append("Specify a file / message to show.<br>");
                     }      
                 } else
-                    if(val.startsWith("connect")) {
+                    /*if(val.startsWith("connect")) {
                                            if(!cmds.includes(val)) {
                                                $out.append(`gavin@localhost:~$ ${val}<br>`);
                                                $out.append(`Login attempt failed. Incorrect host or password '${val.substring(8)}'.<br>`);
@@ -115,7 +115,7 @@
                         $out.append("gavin@localhost:~$ connect<br>");
                         $out.append("Specify a host and password to connect to.<br>");
                     }      
-                } else
+                } else*/
                 if (val === "breach") {
                     $out.append("gavin@localhost:~$ breach<br>");
                     $out.append("Breaching");
