--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -22,7 +22,7 @@
         <br>Type 'help' for a list of commands.
         <div id="output"></div>
         <br>gavin@localhost:~$
-        <input></input>
+        <input class="wider"></input>
     </div>
 <!--<div class="element"></div>
     <script>
