--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div id="screen">Welcome to Terminal Mystery v1.1.1
+    <div id="screen">Welcome to Terminal Mystery. (v0.1.6)
         <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>.
         <br>Original idea from <a href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
         <br>Type 'help' for a list of commands.
@@ -86,12 +86,12 @@
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
-                /* if (val.startsWith("connect")) {
+                 if (val.startsWith("connect")) {
                      if (!cmds.includes(val)) {
                          $out.append(`gavin@localhost:~$ ${val}<br>`);
                          $out.append(`Login attempt failed. Incorrect host or password '${val.substring(8)}'.<br>`);
-                     }
-                     if (val === "connect root m4sk") {
+                     } else
+                     /*if (val === "connect root m4sk") {
                          $out.append("gavin@localhost:~$ connect root m4sk<br>");
                          $out.append("Connecting");
                          setTimeout(function() {
