--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -56,6 +56,27 @@
  $("#screen input").focus();
  $("#screen input").on("keydown", function(event) {
              if (event.which === 13) { // Enter key pressed
+ var cmds = [
+     "",
+     "help",
+     "clear",
+     "concept",
+     "inbox",
+     "show",
+     "show need your help",
+     "connect",
+     "connect root m4sk",
+ ];
+
+ var m4skChance = [
+     "https://gavwin.github.io/Terminal%20Mystery/m4sk.html",
+     "https://gavwin.github.io/Terminal%20Mystery/connection-failed.html",
+ ];
+
+ var $out = $("#output");
+ $("#screen input").focus();
+ $("#screen input").on("keydown", function(event) {
+             if (event.which === 13) { // Enter key pressed
                  var $this = $(this),
                      val = $this.val();
                  $this.focus().val("");
@@ -86,45 +107,46 @@
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
-                /* if (val.startsWith("connect")) {
-                     if (!cmds.includes(val)) {
-                         $out.append(`gavin@localhost:~$ ${val}<br>`);
-                         $out.append(`Login attempt failed. Incorrect host or password '${val.substring(8)}'.<br>`);
-                     } else*/
-                     if (val === "connect root m4sk") {
-                         $out.append("gavin@localhost:~$ connect root m4sk<br>");
-                         $out.append("Connecting");
-                         setTimeout(function() {
-                             $out.append(".");
-                         }, 1000);
-                         setTimeout(function() {
-                             $out.append(".");
-                         }, 2000);
-                         setTimeout(function() {
-                             $out.append(".");
-                         }, 3000);
-                         setTimeout(function() {
-                             $out.append(".");
-                         }, 4000);
-                         setTimeout(function() {
-                             $out.append(".<br>");
-                         }, 5000);
-                         var m4skRandom = m4skChance[Math.floor(Math.random() * m4skChance.length)];
-                         setTimeout(function() {
-                             window.location.href = m4skRandom
-                         }, 5100);
-                         else if (val === "connect") {
-                             $out.append("gavin@localhost:~$ connect<br>");
-                             $out.append("Specify a host and password to connect to.<br>");
-                         }
-                     } else
-                     //else 
-                 {
+                         if (val.startsWith("connect")) {
+                             if (!cmds.includes(val)) {
+                                 $out.append(`gavin@localhost:~$ ${val}<br>`);
+                                 $out.append(`Login attempt failed. Incorrect host or password '${val.substring(8)}'.<br>`);
+                             }
+                             if (val === "connect root m4sk") {
+                               $out.append("gavin@localhost:~$ connect root m4sk<br>");
+                               $out.append("Connecting");
+                               setTimeout(function() {
+                                   $out.append(".");
+                               }, 1000);
+                               setTimeout(function() {
+                                   $out.append(".");
+                               }, 2000);
+                               setTimeout(function() {
+                                   $out.append(".");
+                               }, 3000);
+                               setTimeout(function() {
+                                   $out.append(".");
+                               }, 4000);
+                               setTimeout(function() {
+                                   $out.append(".<br>");
+                               }, 5000);
+                               var m4skRandom = m4skChance[Math.floor(Math.random() * m4skChance.length)];
+                               setTimeout(function() {
+                                   window.location.href = m4skRandom
+                               }, 5100);
+                             } else if (val === "connect") {
+                                 $out.append("gavin@localhost:~$ connect<br>");
+                                 $out.append("Specify a file / message to show.<br>");
+                             }
+                         } else
+                         if(val === "hello world") {
+                           $out.append("yeah hi<br>");
+                        } else {
                          $out.append(`gavin@localhost:~$ ${val}<br>`);
                          $out.append("Command not recognized.<br>");
                      }
                      $this.val("");
-                 }
+                   }
              });
     </script>
 
