--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -107,7 +107,7 @@
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
-                         if (val.startsWith("connect")) {
+                         /*if (val.startsWith("connect")) {
                              if (!cmds.includes(val)) {
                                  $out.append(`gavin@localhost:~$ ${val}<br>`);
                                  $out.append(`Login attempt failed. Incorrect host or password '${val.substring(8)}'.<br>`);
@@ -138,7 +138,7 @@
                                  $out.append("gavin@localhost:~$ connect<br>");
                                  $out.append("Specify a file / message to show.<br>");
                              }
-                         } else
+                         } else*/
                          if(val === "hello world") {
                            $out.append("yeah hi<br>");
                         } else {
