--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -105,7 +105,7 @@
                  var $this = $(this),
                      val = $this.val();
                  $this.focus().val("");
-        /* if (val.startsWith("connect")) {
+         if (val.startsWith("connect")) {
                      if (!cmds.includes(val)) {
                          $out.append(`gavin@localhost:~$ ${val}<br>`);
                          $out.append(`Login attempt failed. Incorrect host or password '${val.substring(8)}'.<br>`);
@@ -136,7 +136,7 @@
                              $out.append("gavin@localhost:~$ connect<br>");
                              $out.append("Specify a host and password to connect to.<br>");
                          }
-                     } else*/
+                     } else
                                       $this.val("");
                  }
              });
