--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div id="screen">Welcome to Terminal Mystery.        (v0.4.3)
+    <div id="screen">Welcome to Terminal Mystery.        (v0.4.4)
         <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>.
         <br>Original idea from <a href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
         <br>Type 'help' for a list of commands.
@@ -84,10 +84,20 @@
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
-                     //else 
-                 {
-                         $out.append(`gavin@localhost:~$ ${val}<br>`);
-                         $out.append("Command not recognized.<br>");
+                     if(val.startsWith("connect")) {
+                       if(val === "connect root m4sk") {
+                         $out.append("gavin@localhost:~$ connect root m4sk<br>");
+                         $out.append("Connecting");
+                       } else if(val === "connect") {
+                         $out.append("gavin@localhost:~$ connect<br>");
+                         $out.append("Specify a host and password to connect to.<br>");
+                       } else if(!cmds.includes(val)) {
+                         $out.append(`gavin@localhost:~$ ${val.substring(8)}<br>`);
+                         $out.append(`Failed to connect. Incorrect host and/or password.<br>`);
+                       }
+                     } else {
+                       $out.append(`gavin@localhost:~$ ${val}<br>`);
+                       $out.append("Command not recognized.<br>");
                      }
                      $this.val("");
                  }
