--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -62,7 +62,7 @@
                  } else
                  if (val === "help") {
                      $out.append("gavin@localhost:~$ help<br>");
-                     $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>clear - Clears the terminal<br>inbox - Shows your inbox<br>show - Shows the contents of a file or message<br>");
+                     $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show <file|message> - Shows the contents of a file or message<br>connect <host> <password> - Connects to the specified host.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
                      $out.append("gavin@localhost:~$ inbox<br>");
