--- a/Terminal Mystery/connection-failed.html
+++ b/Terminal Mystery/connection-failed.html
@@ -42,7 +42,7 @@
                 } else
                     if (val === "exit") {
                     $out.append("login:~$ exit<br>");
-                    $out.append("Successfully exited.");
+                    $out.append("Successfully exited.<br>");
                     $out.append("Connecting to gavin@localhost");
                                           setTimeout(function() {
                         $out.append(".");
