--- a/Terminal Mystery/m4sk.html
+++ b/Terminal Mystery/m4sk.html
@@ -66,7 +66,7 @@
                  if (val.startsWith("show")) {
                      if (!cmds.includes(val)) {
                          $out.append(`root@m4sk:~$ ${val}<br>`);
-                         $out.append(`Could not find a file / message with the name of '${val.substring(5)}'.<br>`);
+                         $out.append(`Could not find a file / message with the name of ${val.substring(5)}.<br>`);
                      }
                      if (val === "show its time") {
                          $out.append("root@m4sk:~$ show need your help<br>");
