--- a/Terminal Mystery/m4sk.html
+++ b/Terminal Mystery/m4sk.html
@@ -55,7 +55,7 @@
                  } else
                  if (val === "ls") {
                      $out.append("root@m4sk:~$ ls<br>");
-                     $out.append("root<br>↳ plans<br>   ↳ peru<br>");
+                     $out.append("root<br>↳ plans<br>&nbsp;&nbsp;&nbsp;&nbsp;↳ peru<br>");
                  } else
                  if (val === "help") {
                      $out.append("root@m4sk:~$ help<br>");
