--- a/Terminal Mystery/m4sk.html
+++ b/Terminal Mystery/m4sk.html
@@ -60,7 +60,7 @@
                  } else
                  if (val === "help") {
                      $out.append("root@m4sk:~$ help<br>");
-                     $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>connect [host] [password] - Connects to the specified host.<br>clear - Clears the terminal<br>");
+                     $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>ls - Shows file tree.<br>exit - Exits and connects you back to gavin@localhost.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
                      $out.append("root@m4sk:~$ inbox<br>");
