--- a/Terminal Mystery/m4sk.html
+++ b/Terminal Mystery/m4sk.html
@@ -39,9 +39,7 @@
      "inbox",
      "show",
      "show its time",
-     "show plans/peru",
      "exit",
-     "ls",
  ];
 
  var $out = $("#output");
@@ -54,13 +52,9 @@
                  if (val === "") {
                      $out.append("root@m4sk:~$<br>");
                  } else
-                 if (val === "ls") {
-                     $out.append("root@m4sk:~$ ls<br>");
-                     $out.append("root<br>↳ plans<br>&nbsp;&nbsp;&nbsp;↳ peru<br>");
-                 } else
                  if (val === "help") {
                      $out.append("root@m4sk:~$ help<br>");
-                     $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>ls - Shows file tree.<br>exit - Exits and connects you back to gavin@localhost.<br>clear - Clears the terminal<br>");
+                     $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>exit - Exits and connects you back to gavin@localhost.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
                      $out.append("root@m4sk:~$ inbox<br>");
@@ -74,10 +68,6 @@
                          $out.append(`root@m4sk:~$ ${val}<br>`);
                          $out.append(`Could not find a file / message with the name of ${val.substring(5)}.<br>`);
                      }
-                     if (val === "show peru") {
-                         $out.append("root@m4sk:~$ show plans/peru<br>");
-                         $out.append("Viewing the content of peru:<br>Objective: Preform a wave of cyber and physical attacks on the Peruvian Government to shut them down.<br>1. Sam goes in from the west side to steal the asset.<br>2. Shadow and the rest of the hacker squad begin the cyber attack.<br>3. Slade and the rest of the attack squad go in and attack. (This draws all government agents).<br>4. Shut down the watchdog system and kidnap Watson.<br>5. Get ransoms from the weakened Peruvian Government in return for Watson.<br>6. A.C.R.O.S.T.I.C.<br>");
-                     } else
                      if (val === "show its time") {
                          $out.append("root@m4sk:~$ show its time<br>");
                          $out.append("Viewing the content of its time:<br>To all M.A.S.K. members,<br>    In exactly 24 hours of this message being sent out, it will be time<br>to take action against the Peruvian Government as planned.<br>This mission has to be our best, as we all know the poor results of what happened last time.<br> - Shadow<br>");
