--- a/Terminal Mystery/1.html
+++ b/Terminal Mystery/1.html
@@ -93,7 +93,7 @@
                          setTimeout(function() { $out.append("."); }, 3000);
                          setTimeout(function() { $out.append("."); }, 4000);
                          setTimeout(function() { $out.append("."); }, 5000);
-                         setTimeout(function() { window.location.href = "https://gavwin.github.io/Terminal%20Mystery/m4sk"; }, 5100);
+                         setTimeout(function() { window.location.href = "https://gavwin.github.io/Terminal%20Mystery/m4sk1"; }, 5100);
                        } else if(val === "connect") {
                          $out.append("gavin@localhost:~$ connect<br>");
                          $out.append("Specify a host and password to connect to.<br>");
