--- a/Terminal Mystery/m4sk1.html
+++ b/Terminal Mystery/m4sk1.html
@@ -74,7 +74,7 @@
                          $out.append(`root@m4sk:~$ ${val}<br>`);
                          $out.append(`Could not find a file / message with the name of ${val.substring(5)}.<br>`);
                      }
-                     if (val === "show peru") {
+                     if (val === "show plans/peru") {
                          $out.append("root@m4sk:~$ show plans/peru<br>");
                          $out.append("Viewing the content of peru:<br>Objective: Preform a wave of cyber and physical attacks on the Peruvian Government to shut them down.<br>1. Sam goes in from the west side to steal the asset.<br>2. Shadow and the rest of the hacker squad begin the cyber attack.<br>3. Slade and the rest of the attack squad go in and attack. (This draws all government agents).<br>4. Shut down the watchdog system and kidnap Watson.<br>5. Get ransoms from the weakened Peruvian Government in return for Watson.<br>6. A.C.R.O.S.T.I.C.<br>");
                      } else
