--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -17,8 +17,8 @@
 <body>
 
     <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(v1.0.1) (latest)
-        <br>A command line mystery game created by <a href="https://github.com/gavwin">Gavin Wainwright</a>.
-        <br>Original idea from <a href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
+        <br>A command line mystery game created by <a target="_blank" href="https://github.com/gavwin">Gavin Wainwright</a>.
+        <br>Original idea from <a target="_blank" href="https://itunes.apple.com/us/app/hackers-quest/id995672666?mt=8">Hacker's Quest.</a>
         <br>Type 'help' for a list of commands.
         <div id="output"></div>
         <br>gavin@localhost:~$
