--- a/Terminal Mystery/index.html
+++ b/Terminal Mystery/index.html
@@ -60,7 +60,7 @@
                  if (val === "") {
                      $out.append("gavin@localhost:~$<br>");
                  } else
-                 if (val === "help") {
+                 if (val.toLowerCase() === "help") {
                      $out.append("gavin@localhost:~$ help<br>");
                      $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>connect [host] [password] - Connects to the specified host.<br>clear - Clears the terminal<br>");
                  } else
